--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a web crawler with restAPI",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server/server.js --exec babel-node --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
@@ -17,13 +18,21 @@
   },
   "homepage": "https://github.com/tungnh91/massdrop-challenge#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "nodemon": "^1.11.0",
     "react": "^15.6.1",
     "redis": "^2.8.0",
+    "request": "^2.81.0",
     "webpack": "^3.5.5"
+  },
+  "devDependencies": {
+    "babel-core": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-stage-2": "*"
   }
 }
